[gd_scene load_steps=6 format=3 uid="uid://fydr11uu4skd"]

[ext_resource type="Script" path="res://Menu/StartMenu.gd" id="1_7xw7e"]
[ext_resource type="Texture2D" uid="uid://cosbspt0j06rv" path="res://Assets/Textures/DreamBackground.png" id="2_rdj61"]
[ext_resource type="Theme" uid="uid://bgntc2jm0thko" path="res://Assets/Theme.tres" id="2_ro0w0"]
[ext_resource type="AudioStream" uid="uid://by0cdksna2b2b" path="res://Assets/Sounds/Schumann - Scenes from Childhood - 01 - A Tale of Distant Lands.mp3" id="4_tdupb"]
[ext_resource type="Texture2D" uid="uid://cxaj6wavj6v1r" path="res://Assets/Textures/DreamWithoutDustBackground.png" id="5_bbpyt"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xw7e")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tdupb")
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rdj61")
expand_mode = 1
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -348.0
offset_right = 385.0
offset_bottom = -71.0
grow_vertical = 0

[node name="StartBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitBtn")
theme = ExtResource("2_ro0w0")
theme_override_font_sizes/font_size = 40
text = "Start the night"
alignment = 0

[node name="HelpBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ro0w0")
theme_override_font_sizes/font_size = 40
text = "I'm lost help"
alignment = 0

[node name="CreditsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ro0w0")
theme_override_font_sizes/font_size = 40
text = "Credits"
alignment = 0

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartBtn")
theme = ExtResource("2_ro0w0")
theme_override_font_sizes/font_size = 40
text = "Quit"
alignment = 0

[node name="HelpUI" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_bbpyt")
expand_mode = 1

[node name="Label" type="Label" parent="HelpUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.0
offset_top = -124.0
offset_right = 397.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ro0w0")
text = "The little Tammy is having a nightmare :(

Evade the monsters and increase your safezone by reaching it and pressing SPACE
and try to survive the night...

Tammy is very thankful for your help <3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpBackBtn" type="Button" parent="HelpUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -98.0
offset_right = 40.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ro0w0")
text = "Back"

[node name="CreditsUI" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_bbpyt")
expand_mode = 1

[node name="Label" type="Label" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.5
offset_top = -124.0
offset_right = 333.5
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ro0w0")
text = "Made with <3 by Louise, Matthieu & Mattia during the Upsi Jam 4.0

Credits to Deep-Fold, GGBotNet, Magma Interactive for some of the assets!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsBackBtn" type="Button" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -98.0
offset_right = 40.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ro0w0")
text = "Back"

[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpBtn" to="." method="_on_help_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsBtn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="HelpUI/HelpBackBtn" to="." method="_on_help_back_btn_pressed"]
[connection signal="pressed" from="CreditsUI/CreditsBackBtn" to="." method="_on_credits_back_btn_pressed"]
